<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D893E9AF"
    tools:context="test.web.uts_tekber.Contentproviders_a">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="327dp"
        android:text="Link Acitivity :" />


    <TextView
        android:id="@+id/judulcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="31dp"
        android:background="#FFFFFF"
        android:text="Materi Content Providers"
        android:textSize="27sp" />

    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/isicontent"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:text="@string/materi_contentproviders"
        android:textAlignment="gravity"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/linkcont"
        android:layout_width="337dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="25dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/link_cont"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="590dp" />

    <Button
        android:id="@+id/buttonc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:text="@string/buttonc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="517dp" />

</RelativeLayout>