<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D893E9AF"
    tools:context="test.web.uts_tekber.Broadcastreceivers_a">


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="373dp"
        android:text="Link Acitivity :" />

    <TextView
        android:id="@+id/judulbroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="21dp"
        android:background="#FFFFFF"
        android:text="Materi Broadcast Receiver"
        android:textSize="27sp" />

    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/isibroadcast"
        android:layout_width="351dp"
        android:layout_height="282dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:text="@string/materi_broadcastreceivers"
        android:textAlignment="gravity"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/linkbroad"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="19dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/link_broad"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="590dp" />

    <Button
        android:id="@+id/buttond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:text="@string/buttond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="517dp" />

</RelativeLayout>