<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D893E9AF"
    tools:context="test.web.uts_tekber.Intent_a">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="324dp"
        android:text="Link Acitivity :" />

    <TextView
        android:id="@+id/judulintent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:text="Materi Intent"
        android:textSize="30sp" />


    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/isiintent"
        android:layout_width="277dp"
        android:layout_height="231dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="69dp"
        android:text="@string/materi_intent"
        android:textAlignment="gravity"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/linkint"
        android:layout_width="287dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="68dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/link_int"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="590dp" />

    <Button
        android:id="@+id/buttona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:text="@string/buttona"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="517dp" />
</RelativeLayout>