<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/link1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D893E9AF"
    tools:context="test.web.uts_tekber.Activitya">


    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/isiactivity"
        android:layout_width="354dp"
        android:layout_height="287dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:text="@string/materi_activity"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/linkact"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="68dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/link_activity"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="590dp" />

    <Button
        android:id="@+id/buttone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:text="@string/buttone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="517dp" />

    <TextView
        android:id="@+id/judulactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:text="Materi Activity"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="324dp"
        android:text="Link Acitivity :" />


</RelativeLayout>